--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "ts-node-register": "^1.0.0",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "got": "^11.8.2"
   }
 }
