--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "air-circulator",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,5 +22,14 @@
   },
   "dependencies": {
     "got": "^11.8.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pvince/air-circulator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pvince/air-circulator/issues"
+  },
+  "homepage": "https://github.com/pvince/air-circulator#readme",
+  "description": ""
 }
