--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/columnify": "^1.5.1",
     "@types/lodash": "^4.14.171",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
@@ -23,6 +24,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "columnify": "^1.5.4",
     "got": "^11.8.2",
     "lodash": "^4.17.21"
   },
