Started fleshing out a logger for the air-circulator

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "columnify": "^1.5.4",
     "got": "^11.8.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "winston": "^3.3.3"
   },
   "repository": {
     "type": "git",
