--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "tplink-smarthome-api": "^3.3.0",
     "ts-node-register": "^1.0.0",
     "typescript": "^4.3.5"
   },
