--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/columnify": "^1.5.1",
+    "@types/fs-extra": "^9.0.12",
     "@types/lodash": "^4.14.171",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "columnify": "^1.5.4",
+    "fs-extra": "^10.0.0",
     "got": "^11.8.2",
     "lodash": "^4.17.21",
     "winston": "^3.3.3"
