--- a/settings.json
+++ b/settings.json
@@ -3,16 +3,22 @@
     "officeFan": {
       "address": "192.168.1.134",
       "name": "Small Fan",
+      "insideSourceID": "00015652",
+      "outsideSourceID": "",
       "tempThreshold": 77
     },
     "houseFan": {
       "address": "192.168.1.42",
       "name": "House Fan",
+      "insideSourceID": "00010242",
+      "outsideSourceID": "main",
       "tempThreshold": 60
     },
     "boxFan": {
       "address": "192.168.1.196",
       "name": "Box Fan",
+      "insideSourceID": "00010242",
+      "outsideSourceID": "main",
       "tempThreshold": 60
     }
   },
