ESLint fixes. Switched to requiring semi colons.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,8 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "semi": "off",
+        "@typescript-eslint/semi": ["error", "always"],
+        "@typescript-eslint/consistent-type-assertions": ["error", { "assertionStyle": "as" }]
     }
 }
