Added unit tests for TP Link API

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
     "search": "tsc && node dist/identify.js",
     "start": "tsc && node dist/app.js",
     "build": "rm -rf dist && tsc"
@@ -12,16 +12,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.22",
     "@types/columnify": "^1.5.1",
     "@types/fs-extra": "^9.0.12",
     "@types/lodash": "^4.14.171",
+    "@types/mocha": "^9.0.0",
+    "@types/sinon": "^10.0.4",
+    "@types/sinon-chai": "^3.2.5",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "chai": "^4.3.4",
     "eslint": "^7.12.1",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "mocha": "^9.1.2",
+    "nyc": "^15.1.0",
+    "sinon": "^11.1.2",
+    "sinon-chai": "^3.7.0",
     "tplink-smarthome-api": "^3.3.0",
     "ts-node-register": "^1.0.0",
     "typescript": "^4.3.5"
