--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,22 @@
 {
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "@typescript-eslint"
+    ],
+    "extends": [
+        "standard"
+    ],
     "env": {
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "standard"
-    ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
+        "project": [
+            "./tsconfig.json",
+            "./tsconfig-test.json"
+        ]
     },
-    "plugins": [
-        "@typescript-eslint"
-    ],
     "rules": {
         "semi": "off",
         "require-jsdoc": "error",
